# site

./: .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  refs.bib  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
blog/: index.html
blog/2022/anagrams/: index.html
blog/2022/capturar-atividades-do-strava-usando-python/: index.html
blog/2022/doshi2022/: index.html
blog/2022/flowgmm/: index.html
blog/2022/managing-messes-in-computational-notebooks/: index.html
blog/2022/software-development-workflow/: index.html
blog/2023/preparacao-de-ambiente-python/: index.html
blog/tags/: index.html
docs/: index.md
docs/blog/: .pages  index.md
docs/blog/2022/: anagrams.md  capturar-atividades-do-strava-usando-python.md  doshi2022.md  flowgmm.md  managing-messes-in-computational-notebooks.md  software-development-workflow.md
docs/blog/2023/: preparacao-de-ambiente-python.md
docs/css/: tables.css
docs/listas/: books.md  donation.md  index.md  papers.md
docs/listas/discos/: belchior-alucinacao.md  dire-straits-money-for-nothing.md  index.md  pholhas-disco-de-ouro.md  (+2 more)
docs/projetos/: index.md
docs/sobre/: about.md  index.md
listas/: index.html
listas/books/: index.html
listas/discos/: index.html
listas/donation/: index.html
listas/movies/: index.html
listas/papers/: index.html
overrides/: blog.html  home.html
overrides/blog/: blog-override.html
projetos/: index.html
search/: search_index.json
sobre/: index.html
sobre/about/: index.html
tables/: books.csv  papers.csv
(+5 files in other folders)
