[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-material = "^8.2.1"
pre-commit = "^2.17.0"
mkdocs-jupyter = "^0.20.0"
pymdown-extensions = "^9.2"
mkdocs-bibtex = "^2.0.1"
mkdocs-blogging-plugin = "^1.3.0"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
